# Bremen

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.training  README.md  ROADMAP.md  environment.yml  pyproject.toml  requirements.txt  sonar-project.properties
.project-memory/: AGENT_TEST_DEBUGGING_RULES.md  IMPLEMENTATION_REPORT_WORKFLOW.md  ORCHESTRATOR_STANDARD.txt  TEST_DESIGN_STANDARD.md  memory_index.yml  project_contract.yml  review-artifact.schema.yml
agents/: README.md  architect.yml  coder.yml  plan-review.yml  precommit-review.yml  universal_agent_workflow_anti_drift_manual.md
config/: README.md  aramis_preprocessing_v0_1_config.json  aramis_product_versioning.json  human1_diagnoses_metadata.json  human1_diagnoses_metadata_h5_audit.json  human1_diagnoses_metadata_h5_mismatches.csv
docs/: agbh_quality_exclusions.md  api_contract.md  architecture.md  converter_preprocessing_boundary.md  data_preprocessing.md  eosproduct_environment.md  feature_artifact_ingestion_boundary.md  feature_artifact_prediction_flow.md  machine_learning_concept.md  mlflow.md  preprocessing_source_reconciliation.md  product_development_rules.md  product_input_pipeline_contract.md  production_e2e_smoke.md  release_readiness_operator_notes.md  repository_cleanup.md  roadmap.md  workspace_contract.md
examples/: README.md  aramis_dataframe_one_to_many_v0_1.py  aramis_dataframe_one_to_one_v0_1.py  aramis_final_experimental_model_v0_1.py  aramis_mlflow_draft.py  aramis_one_to_many_logistic_baseline_v0_1.py  aramis_one_to_many_product_model_v0_1.py  aramis_product_notebook_helpers.py  bremen_dataframe_one_to_many_v0_1.py  bremen_dataframe_one_to_one_v0_1.py  bremen_final_experimental_model_v0_1.py  bremen_mlflow_draft.py  bremen_one_to_many_logistic_baseline_v0_1.py  bremen_one_to_many_product_model_v0_1.py  preprocess_all.sh  preprocess_one_to_many.sh  preprocess_one_to_many_biopsy.sh  preprocess_one_to_many_biopsy_minimal.sh  (+3 more)
(+490 files in other folders)
