[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bremen"
version = "0.1.0"
description = "Bremen — XRD-based ML decision-support product candidate. Derived from the Aramis project (cancer-classification product draft)."
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [{ name = "EOS" }]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "joblib>=1.4",
  "h5py>=3.10",
  "pyarrow>=17",
  "pyyaml>=6.0",
  "mlflow>=2.20",
  "xrd-preprocessing @ git+https://github.com/Eos-Dx/XRD-preprocessing.git@v0.1.5-beta",
  "boto3>=1.34",
  "scipy>=1.13",
]

[project.scripts]
bremen = "bremen.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=7.0",
  "ruff>=0.8",
  "marimo>=0.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bremen"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"
